--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authorization": {
+    "Facebook": {
+      "AppId": "170559199268168",
+      "AppSecret": "9ebbfab5b06bc31f1aae9fe7174c93f4"
+    }
+  }
 }
