--- a/backend/Core/Contracts/Contracts.csproj
+++ b/backend/Core/Contracts/Contracts.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
+      <Folder Include="Results" />
     </ItemGroup>
 
 </Project>
