--- a/backend/Core/Domain/Domain.csproj
+++ b/backend/Core/Domain/Domain.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>Entities</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -16,6 +17,10 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Repository" />
     </ItemGroup>
 
 </Project>
