Добавил авторизацию через гугл. Добавил automapper. Изменил сущность User, UserInfo и т.д.

--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -13,6 +13,10 @@
     "Facebook": {
       "AppId": "170559199268168",
       "AppSecret": "9ebbfab5b06bc31f1aae9fe7174c93f4"
+    },
+    "Google": {
+      "AppId": "930943899094-n86i2ipn8jb3j51aj9d8k2tcojd89ilb.apps.googleusercontent.com",
+      "AppSecret": "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"
     }
   }
 }
