--- a/backend/Carsharing/Carsharing.csproj
+++ b/backend/Carsharing/Carsharing.csproj
@@ -17,12 +17,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core\Contracts\Contracts.csproj" />
+    <ProjectReference Include="..\Core\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Core\Services.Abstractions\Services.Abstractions.csproj" />
+    <ProjectReference Include="..\Core\Services\Services.csproj" />
     <ProjectReference Include="..\Entities\Entities.csproj" />
-    <ProjectReference Include="..\Infrastructure\Services\Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers" />
     <Folder Include="wwwroot\tariffs" />
   </ItemGroup>
 </Project>
