--- a/backend/Core/Services/Services.csproj
+++ b/backend/Core/Services/Services.csproj
@@ -16,4 +16,8 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Admin" />
+    </ItemGroup>
+
 </Project>
