--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
 
-    "DefaultConnection": "Host=localhost;Port=5432;Database=Carsharing;Username=postgres;Password=112112aA"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=Carsharing;Username=postgres;Password=g190703v"
   },
   "Logging": {
     "LogLevel": {
