исправил неполучение истории сообщений

--- a/backend/Carsharing/Carsharing.csproj
+++ b/backend/Carsharing/Carsharing.csproj
@@ -31,5 +31,7 @@
   <ItemGroup>
     <Folder Include="AdminPanelResources" />
     <Folder Include="MainSiteContent" />
+    <Folder Include="AdminPanelResources\" />
+    <Folder Include="MainSiteContent\" />
   </ItemGroup>
 </Project>
