--- a/.github/workflows/frontend-lint.yml
+++ b/.github/workflows/frontend-lint.yml
@@ -15,30 +15,8 @@ jobs:
   mainsite:
     name: Linting Main
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./frontend/website
-    steps:
-      - name: Install NodeJS
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-
-      - name: Code Checkout
-        uses: actions/checkout@v2
-
-      - name: Install Dependencies
-        run: npm ci
-
-      - name: Code Linting
-        run: npx eslint "/scr"
-
-  admin:
-    name: Linting Admin
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./frontend/admin
+    env: 
+      FOLDER: "frontend/website"
 	
     steps:
       - name: Install NodeJS
@@ -50,7 +28,37 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Dependencies
-        run: npm ci
+        working-directory: .
+        run: |
+          cd {{FOLDER}}  
+          npm ci
+	
+      - name: Code Linting
+        run: |
+          cd ${{FOLDER}}
+          npx eslint "/scr"
+
+  admin:
+    name: Linting Admin
+    runs-on: ubuntu-latest
+    env: 
+      FOLDER: "frontend/admin"
+	
+    steps:
+      - name: Install NodeJS
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Code Checkout
+        uses: actions/checkout@v2
+
+      - name: Install Dependencies
+        run: |
+          cd {{FOLDER}}  
+          npm ci
 
       - name: Code Linting
-        run: npx eslint "/src"
+        run: |
+          cd ${{FOLDER}}
+          npx eslint "/scr"
