--- a/.github/workflows/frontend-lint.yml
+++ b/.github/workflows/frontend-lint.yml
@@ -1,61 +1,55 @@
-name: Lint 
-
+---
+name: Lint
 on:
   push:
     branches:
       - main
       - develop
   pull_request:
-    types: [opened, synchronize, reopened]
-
+    types:
+      - opened
+      - synchronize
+      - reopened
 env:
   NODE_VERSION: 16
-
 jobs:
   mainsite:
     name: Linting Main
     runs-on: ubuntu-latest
-    env: 
+    env:
       FOLDER: frontend/website
     steps:
       - name: Install NodeJS
         uses: actions/setup-node@v2
         with:
           node-version: ${{ env.NODE_VERSION }}
-
       - name: Code Checkout
         uses: actions/checkout@v2
-
       - name: Install Dependencies
         working-directory: .
         run: |
           cd {{FOLDER}}  
           npm ci
-	
       - name: Code Linting
         run: |
           cd ${{FOLDER}}
           npx eslint "/scr"
-
   admin:
     name: Linting Admin
     runs-on: ubuntu-latest
-    env: 
+    env:
       FOLDER: frontend/admin
     steps:
       - name: Install NodeJS
         uses: actions/setup-node@v2
         with:
           node-version: ${{ env.NODE_VERSION }}
-
       - name: Code Checkout
         uses: actions/checkout@v2
-
       - name: Install Dependencies
         run: |
           cd {{FOLDER}}  
           npm ci
-
       - name: Code Linting
         run: |
           cd ${{FOLDER}}
