--- a/.github/workflows/frontend-lint.yml
+++ b/.github/workflows/frontend-lint.yml
@@ -17,7 +17,7 @@ jobs:
     name: Linting Main
     runs-on: ubuntu-latest
     env:
-      FOLDER: frontend/website
+      FOLDER: "frontend/website"
     steps:
       - name: Install NodeJS
         uses: actions/setup-node@v2
@@ -38,7 +38,7 @@ jobs:
     name: Linting Admin
     runs-on: ubuntu-latest
     env:
-      FOLDER: frontend/admin
+      FOLDER: "frontend/admin"
     steps:
       - name: Install NodeJS
         uses: actions/setup-node@v2
