--- a/.github/workflows/frontend-lint.yml
+++ b/.github/workflows/frontend-lint.yml
@@ -17,7 +17,7 @@ jobs:
     name: Linting Main
     runs-on: ubuntu-latest
     env:
-      FOLDER: "frontend/website"
+      FOLDER: ""
     steps:
       - name: Install NodeJS
         uses: actions/setup-node@v2
@@ -28,11 +28,11 @@ jobs:
       - name: Install Dependencies
         working-directory: .
         run: |
-          cd ${{FOLDER}}  
+          cd frontend/website  
           npm ci
       - name: Code Linting
         run: |
-          cd ${{FOLDER}}
+          cd frontend/website
           npx eslint "/scr"
   admin:
     name: Linting Admin
@@ -48,9 +48,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Dependencies
         run: |
-          cd ${{FOLDER}}  
+          cd frontend/admin  
           npm ci
       - name: Code Linting
         run: |
-          cd ${{FOLDER}}
+          cd frontend/admin
           npx eslint "/scr"
