--- a/.github/workflows/frontend-lint.yml
+++ b/.github/workflows/frontend-lint.yml
@@ -33,8 +33,7 @@ jobs:
       - name: Code Linting
         run: |
           cd frontend/website
-          pwd
-          npx eslint scr/
+          npx eslint src/
   admin:
     name: Linting Admin
     runs-on: ubuntu-latest
@@ -54,4 +53,4 @@ jobs:
       - name: Code Linting
         run: |
           cd frontend/admin
-          npx eslint scr/
+          npx eslint src/
