--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ FRONT_WEBSITE_PORTS="3000:3000"
 FRONT_ADMIN_PORTS="3001:3000"
 BACK_ASP_PORTS="80:80"
 
-BACK_ASP_ENV="Debug"
+BACK_ASP_ENV=Development
