--- a/compose.yaml
+++ b/compose.yaml
@@ -9,7 +9,8 @@ services:
         - FrontendHost__Main = ${FRONT__MAIN}
         - FrontendHost__Admin = ${FRONT__ADMIN}
         - ASPNETCORE_ENVIRONMENT=${BACK_ASP_ENV}
-        
+      depends_on:
+       - db    
       ports:
         - ${BACK_ASP_PORTS}
         
@@ -25,3 +26,32 @@ services:
       container_name: admin_dashboard
       ports:
         - ${FRONT_ADMIN_PORTS}
+  db:
+      container_name: database
+      image: postgres:latest
+      environment:
+        POSTGRES_DB: Carsharing
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: P@ssw0rd
+        PGDATA: "/var/lib/postgresql/data/pgdata"
+      volumes:
+        - ../2. Init Database:/docker-entrypoint-initdb.d
+        - habrdb-data:/var/lib/postgresql/data
+      ports:
+        - ${DB_PORTS}
+    
+  pgadmin:
+    container_name: pgadmin_container
+    image: dpage/pgadmin4:7.2
+    environment:
+      PGADMIN_EMAIL: "goust334@gmail.com"
+      PGADMIN_PASSWORD: "P@ssw0rd"
+      PGADMIN_CONFIG_SERVER_MODE: "False"
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+    ports:
+      - ${PGADMIN_PORTS}
+
+volumes:
+  habrdb-data:
+  pgadmin-data:
