added env for database password

--- a/.env
+++ b/.env
@@ -6,5 +6,7 @@ FRONT_ADMIN_PORTS="3001:3000"
 BACK_ASP_PORTS="80:80"
 PGADMIN_PORTS="5050:80"
 DB_PORTS="5432:5432"
+DB_USER=postgres
+DB_PASSWORD=P@ssw0rd
 
 BACK_ASP_ENV=Development
