--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
 
-    "DefaultConnection": "Host=localhost;Port=5432;Database=Carsharing;Username=postgres;Password=marsel2003"
+    "DefaultConnection": "Host=db;Port=5432;Database=Carsharing;Username=postgres;Port=5432;Password=P@ssw0rd"
   },
   "Logging": {
     "LogLevel": {
@@ -9,6 +9,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "FrontendHost": {
+    "Main": "",
+    "Admin": ""
+  },
+
   "AllowedHosts": "*",
   "Authorization": {
     "Facebook": {
