--- a/frontend/admin/.eslintrc.json
+++ b/frontend/admin/.eslintrc.json
@@ -14,6 +14,7 @@
     "plugins": ["react", "react-hooks"],
     "rules": {
 	    "react/react-in-jsx-scope": "off",
-      "react/prop-types": "off"
+            "react/prop-types": "off",
+	    "react-hooks/exhaustive-deps": "off"
     }
 }  
