warning fixes, moved secrets to env

--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
 
-    "DefaultConnection": ""
+    "DefaultConnection": "  "
   },
   "Logging": {
     "LogLevel": {
@@ -18,12 +18,12 @@
   "AllowedHosts": "*",
   "Authorization": {
     "Facebook": {
-      "AppId": "170559199268168",
-      "AppSecret": "9ebbfab5b06bc31f1aae9fe7174c93f4"
+      "AppId": "",
+      "AppSecret": ""
     },
     "Google": {
-      "AppId": "687415070028-3o7siun1s5skobj4bao912tebcjbp34f.apps.googleusercontent.com",
-      "AppSecret": "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",
+      "AppId": "",
+      "AppSecret": "",
       "ReturnUri": "https://localhost:7129/api/account/google-external-auth-callback"
     }
   }
