--- a/.env
+++ b/.env
@@ -10,3 +10,9 @@ DB_USER=postgres
 DB_PASSWORD=P@ssw0rd
 
 BACK_ASP_ENV=Development
+
+GOOGLE_APP_ID="687415070028-3o7siun1s5skobj4bao912tebcjbp34f.apps.googleusercontent.com"
+GOOGLE_APP_SECRET="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"
+
+FACEBOOK_APP_ID="170559199268168"
+FACEBOOK_APP_SECRET="9ebbfab5b06bc31f1aae9fe7174c93f4"
