--- a/compose.yaml
+++ b/compose.yaml
@@ -9,6 +9,8 @@ services:
         - FrontendHost__Main = ${FRONT__MAIN}
         - FrontendHost__Admin = ${FRONT__ADMIN}
         - ASPNETCORE_ENVIRONMENT=${BACK_ASP_ENV}
+        - Authorization__Google__AppId = ${GOOGLE_APP_ID}
+        - Authorization__Google__AppSecret = ${GOOGLE_APP_SECRET}
       depends_on:
        - db    
       ports:
