changed, hub methods on front, changed sendmessage processing, added messege bus and models

--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-
-    "DefaultConnection": "  "
+    "DefaultConnection": "Host=localhost;Port=5432;Database=Carsharing;Username=postgres;Password=marsel2003",
+    "RedisConnection": "localhost:6379"
   },
   "Logging": {
     "LogLevel": {
@@ -11,7 +11,7 @@
   },
 
   "FrontendHost": {
-    "Main": "",
+    "Main": "http://localhost:3000",
     "Admin": ""
   },
 
