changed dict to concurent, stil races, removed redis

--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=Carsharing;Username=postgres;Password=marsel2003",
+    "ChatDatabase": "Host=localhost;Port=5432;Database=Chat;Username=postgres;Password=marsel2003",
     "RedisConnection": "localhost:6379"
   },
   "Logging": {
