updates for marsel

--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -13,7 +13,7 @@
 
   "FrontendHost": {
     "Main": "http://localhost:3000",
-    "Admin": ""
+    "Admin": "http://localhost:3001"
   },
 
   "AllowedHosts": "*",
