--- a/frontend/admin/.eslintrc.json
+++ b/frontend/admin/.eslintrc.json
@@ -11,7 +11,7 @@
         "jsx": true
       }
     },
-    "plugins": ["react", "react-hooks"],
+    "plugins": ["react", "react-hooks", "eslint-plugin-only-error"],
     "rules": {
 	    "react/react-in-jsx-scope": "off",
             "react/prop-types": "off",
