--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -1,8 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=Carsharing;Username=postgres;Password=marsel2003",
-    "ChatDatabase": "Host=localhost;Port=5432;Database=Chat;Username=postgres;Password=marsel2003",
-    "RedisConnection": "localhost:6379"
+    "DefaultConnection": " "
   },
   "Logging": {
     "LogLevel": {
