--- a/.env
+++ b/.env
@@ -4,6 +4,10 @@ FRONT__ADMIN="https://localhost:3001"
 FRONT_WEBSITE_PORTS="3000:3000"
 FRONT_ADMIN_PORTS="3001:3000"
 BACK_ASP_PORTS="80:80"
+BACK_ASP_PORTS2="81:443"
+ASPNETCORE_URLS="https://+443;http://+80"
+ASPNETCORE_HTTPS_PORT="443"
+DEFAULT_CONNECTION="User ID=postgres;Password=P@ssw0rd;Server=db;Port=5432;Database=Carsharing;"
 PGADMIN_PORTS="5050:80"
 DB_PORTS="5432:5432"
 DB_USER=postgres
