--- a/backend/Core/Services/Services.csproj
+++ b/backend/Core/Services/Services.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Infrastructure\Migrations\Migrations.csproj" />
       <ProjectReference Include="..\Contracts\Contracts.csproj" />
       <ProjectReference Include="..\Domain\Domain.csproj" />
       <ProjectReference Include="..\Services.Abstractions\Services.Abstractions.csproj" />
