--- a/backend/Infrastructure/Persistence/Persistence.csproj
+++ b/backend/Infrastructure/Persistence/Persistence.csproj
@@ -14,5 +14,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Services.Abstractions\Services.Abstractions.csproj" />
+    <ProjectReference Include="..\Migrations\Migrations.csproj" />
   </ItemGroup>
 </Project>
