--- a/backend/Infrastructure/Migrations/Migrations.csproj
+++ b/backend/Infrastructure/Migrations/Migrations.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Persistence\Persistence.csproj" />
   </ItemGroup>
 
 </Project>
