Создал message broker. Добавил его в хаб. Чуть-чуть изменил хаб

--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -25,5 +25,10 @@
       "AppSecret": "",
       "ReturnUri": "https://localhost:7129/api/account/google-external-auth-callback"
     }
+  },
+  "RabbitMq": {
+    "Username": "user",
+    "Password": "password",
+    "Host": "rabbitmq://localhost:5672"
   }
 }
