--- a/backend/Carsharing/appsettings.Development.json
+++ b/backend/Carsharing/appsettings.Development.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
+  "RabbitMq": {
+    "Username": "user",
+    "Password": "password",
+    "Host": "rabbitmq://localhost:5672"
+  },
   "FrontendHost": "http://localhost:3000, https://localhost:3000, https://localhost:3001, http://localhost:3001"
 }
