--- a/backend/ChatConsumers/ChatConsumers.csproj
+++ b/backend/ChatConsumers/ChatConsumers.csproj
@@ -7,9 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="MassTransit" Version="8.1.2-develop.1566" />
+      <PackageReference Include="MassTransit" Version="8.1.1" />
       <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
-      <PackageReference Include="RabbitMQ.Client" Version="6.6.0" />
     </ItemGroup>
 
     <ItemGroup>
