--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,4 +9,19 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+  
+  webapp:
+    container_name: CarSharingApp
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      - ASPNETCORE_ENVIRONMENT:development
+      - RabbitMq__Username:user
+      - RabbitMq__Password:password
+      - RabbitMq__Host:rabbitmq://localhost:5672
+    depends_on:
+      - rabbitmq
     
