Added constring to env, changed service name to snakeCase

--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ PGADMIN_PORTS="5050:80"
 DB_PORTS="5432:5432"
 DB_USER=postgres
 DB_PASSWORD=P@ssw0rd
+DEFAULT_CONNECTION="User ID=postgres;Password=P@ssw0rd;Server=db;Port=5432;Database=Carsharing;"
 
 BACK_ASP_ENV=Development
 
