--- a/backend/ChatConsumers/ChatConsumers.csproj
+++ b/backend/ChatConsumers/ChatConsumers.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Infrastructure\Migrations\Migrations.csproj" />
       <ProjectReference Include="..\Infrastructure\Persistence\Persistence.csproj" />
     </ItemGroup>
 
