--- a/compose.yaml
+++ b/compose.yaml
@@ -9,7 +9,7 @@ services:
       environment:
         - ConnectionStrings__DefaultConnection=${DEFAULT_CONNECTION}
         - RabbitMqConfig__Username=chatConsumer
-        - RabbitMqConfig__Password=P@ssw0rd
+        - RabbitMqConfig__Password=Passw0rd
         - RabbitMqConfig__Hostname=rabbitmq
         - RabbitMqConfig__Port=5672
       depends_on:
@@ -28,7 +28,7 @@ services:
         - Authorization__Google__AppSecret = ${GOOGLE_APP_SECRET}
         - ConnectionStrings__DefaultConnection=${DEFAULT_CONNECTION}
         - RabbitMqConfig__Username=chatConsumer
-        - RabbitMqConfig__Password=P@ssw0rd
+        - RabbitMqConfig__Password=Passw0rd
         - RabbitMqConfig__Hostname=rabbitmq
         - RabbitMqConfig__Port=5672
       depends_on:
@@ -69,4 +69,4 @@ services:
       - "5672:5672"
     environment:
       RABBITMQ_DEFAULT_USER: "chatConsumer"
-      RABBITMQ_DEFAULT_PASS: "P@ssw0rd"
+      RABBITMQ_DEFAULT_PASS: "Passw0rd"
