--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,24 @@
 version: '3.9'
 
-services:
-  
+services:  
+  chat_history_saver:
+      build: 
+        context: ./backend
+        dockerfile: ChatConsumersDockerfile 
+      container_name: chatConsumer
+      environment:
+        - ConnectionStrings__DefaultConnection=${DEFAULT_CONNECTION}
+        - RabbitMqConfig__Username=chatConsumer
+        - RabbitMqConfig__Password=Passw0rd
+        - RabbitMqConfig__Hostname=rabbitmq
+        - RabbitMqConfig__Port=5672
+      depends_on:
+       - rabbitmq
+        
   backend:
-      build: ./backend
+      build: 
+        context: ./backend
+        dockerfile: CarsharingDockerfile
       container_name: backend
       environment:
         - FrontendHost__Main = ${FRONT__MAIN}
@@ -11,8 +26,14 @@ services:
         - ASPNETCORE_ENVIRONMENT=${BACK_ASP_ENV}
         - Authorization__Google__AppId = ${GOOGLE_APP_ID}
         - Authorization__Google__AppSecret = ${GOOGLE_APP_SECRET}
+        - ConnectionStrings__DefaultConnection=${DEFAULT_CONNECTION}
+        - RabbitMqConfig__Username=chatConsumer
+        - RabbitMqConfig__Password=Passw0rd
+        - RabbitMqConfig__Hostname=rabbitmq
+        - RabbitMqConfig__Port=5672
       depends_on:
-       - db    
+       - db 
+       - rabbitmq   
       ports:
         - ${BACK_ASP_PORTS}
         
@@ -38,22 +59,14 @@ services:
         PGDATA: "/var/lib/postgresql/data/pgdata"
       volumes:
         - ../2. Init Database:/docker-entrypoint-initdb.d
-        - habrdb-data:/var/lib/postgresql/data
       ports:
         - ${DB_PORTS}
-    
-  pgadmin:
-    container_name: pgadmin_container
-    image: dpage/pgadmin4:7.2
-    environment:
-      PGADMIN_EMAIL: "goust334@gmail.com"
-      PGADMIN_PASSWORD: "P@ssw0rd"
-      PGADMIN_CONFIG_SERVER_MODE: "False"
-    volumes:
-      - pgadmin-data:/var/lib/pgadmin
+        
+  rabbitmq:
+    container_name: rabbitmq
+    image: rabbitmq:3-alpine
     ports:
-      - ${PGADMIN_PORTS}
-
-volumes:
-  habrdb-data:
-  pgadmin-data:
+      - "5672:5672"
+    environment:
+      RABBITMQ_DEFAULT_USER: "chatConsumer"
+      RABBITMQ_DEFAULT_PASS: "Passw0rd"
