--- a/.github/workflows/frontend-lint.yml
+++ b/.github/workflows/frontend-lint.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Code Linting
         run: |
           cd frontend/website
-          npx eslint src/
+          npx eslint src/ --max-warnings=0
   admin:
     name: Linting Admin
     runs-on: ubuntu-latest
@@ -53,4 +53,4 @@ jobs:
       - name: Code Linting
         run: |
           cd frontend/admin
-          npx eslint src/
+          npx eslint src/ --max-warnings=0
