--- a/frontend/admin/.eslintrc.json
+++ b/frontend/admin/.eslintrc.json
@@ -16,5 +16,10 @@
 	    "react/react-in-jsx-scope": "off",
             "react/prop-types": "off",
 	    "react-hooks/exhaustive-deps": "off"
+    },
+    "settings": {
+       "react": {
+          "version": "detect"
+          }
     }
 }  
