--- a/frontend/website/.eslintrc.json
+++ b/frontend/website/.eslintrc.json
@@ -15,7 +15,11 @@
     "rules": {
 	    "react/react-in-jsx-scope": "off",
       "react/prop-types": "off",
-      "react-hooks/exhaustive-deps": "off",
-      "react/no-unknown-property": [2, { ignore: ['figure', 'color-type'] }]
+      "react-hooks/exhaustive-deps": "off"
+    },
+    "settings": {
+       "react": {
+          "version": "detect"
+          }
     }
 }  
