Frontend eslint fixes
* Fixes

* uncommented string for correct css

* deleted commented code

* configured eslint

* Added eslint max warnings 0

* updated CI

---------

Co-authored-by: User impl_zdraste <egorov.r.684017@gmail.com>

--- a/frontend/website/.eslintrc.json
+++ b/frontend/website/.eslintrc.json
@@ -13,7 +13,13 @@
     },
     "plugins": ["react", "react-hooks"],
     "rules": {
-	"react/react-in-jsx-scope": "off",
-        "react-hooks/exhaustive-deps": "off"
+	    "react/react-in-jsx-scope": "off",
+      "react/prop-types": "off",
+      "react-hooks/exhaustive-deps": "off"
+    },
+    "settings": {
+       "react": {
+          "version": "detect"
+          }
     }
 }  
