--- a/compose.yaml
+++ b/compose.yaml
@@ -12,6 +12,8 @@ services:
         - RabbitMqConfig__Password=Passw0rd
         - RabbitMqConfig__Hostname=rabbitmq
         - RabbitMqConfig__Port=5672
+        - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+        - ASPNETCORE_Kestrel__Certificates__Default__Password=${KestrelCertifPass}
       depends_on:
        - rabbitmq
         
@@ -26,6 +28,8 @@ services:
         - ASPNETCORE_ENVIRONMENT=${BACK_ASP_ENV}
         - ASPNETCORE_URLS=${ASPNETCORE_URLS}
         - ASPNETCORE_HTTPS_PORT=${ASPNETCORE_HTTPS_PORT}
+        - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+        - ASPNETCORE_Kestrel__Certificates__Default__Password=${KestrelCertifPass}
         - ConnectionStrings__DefaultConnection=${DEFAULT_CONNECTION}
         - Authorization__Google__AppId = ${GOOGLE_APP_ID}
         - Authorization__Google__AppSecret = ${GOOGLE_APP_SECRET}
@@ -39,9 +43,6 @@ services:
       ports:
         - ${BACK_ASP_PORTS}
         - ${BACK_ASP_PORTS2}
-      volumes:
-        - ${APPDATA}\microsoft\UserSecrets\:/root/.microsoft/usersecrets
-        - ${USERPROFILE}\.aspnet\https:/root/.aspnet/https/
         
   website:
       build: ./frontend/website
