Add React enviroments values

--- a/.env
+++ b/.env
@@ -13,6 +13,8 @@ DB_PORTS="5432:5432"
 DB_USER=postgres
 DB_PASSWORD=P@ssw0rd
 
+API_URL="https://localhost:81/api"
+
 BACK_ASP_ENV=Development
 
 GOOGLE_APP_ID="687415070028-3o7siun1s5skobj4bao912tebcjbp34f.apps.googleusercontent.com"
