Add enviroments on admin

--- a/.env
+++ b/.env
@@ -13,7 +13,8 @@ DB_PORTS="5432:5432"
 DB_USER=postgres
 DB_PASSWORD=P@ssw0rd
 
-API_URL="https://localhost:81/api"
+FRONTEND_API_URL="https://localhost:81/api"
+ADMIN_API_URL="https://localhost:81/api/admin"
 
 BACK_ASP_ENV=Development
 
