--- a/frontend/admin/Dockerfile
+++ b/frontend/admin/Dockerfile
@@ -2,5 +2,7 @@ FROM node:latest
 WORKDIR /admin_dashboard
 COPY package.json ./
 RUN npm install
+ARG REACT_APP_MY_VARIABLE
+ENV REACT_APP_MY_VARIABLE $REACT_APP_MY_VARIABLE
 COPY . .
 CMD ["npm", "start"]
