Add sockets to enviroment variables

--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "",
+    "LocalConnection": "User ID=postgres;Password=P@ssw0rd;Server=db;Port=5432;Database=Carsharing;"
   },
   "Logging": {
     "LogLevel": {
