--- a/.env
+++ b/.env
@@ -13,8 +13,9 @@ DB_PORTS="5432:5432"
 DB_USER=postgres
 DB_PASSWORD=P@ssw0rd
 
-FRONTEND_API_URL="https://localhost:81/api"
+WEBSITE_API_URL="https://localhost:81/api"
 ADMIN_API_URL="https://localhost:81/api/admin"
+WEBSITE_CHAT_URL='https://localhost:81/chat'
 
 BACK_ASP_ENV=Development
 
