--- a/compose.yaml
+++ b/compose.yaml
@@ -28,6 +28,7 @@ services:
       container_name: frontend
       environment:
         - REACT_APP_WEBSITE_API_URL=${WEBSITE_API_URL}
+        - REACT_APP_WEBSITE_CHAT_URL=${WEBSITE_CHAT_URL}
       ports:
         - ${FRONT_WEBSITE_PORTS}
         
