removed password from appsettings.json

--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "",
-    "LocalConnection": "User ID=postgres;Password=P@ssw0rd;Server=db;Port=5432;Database=Carsharing;"
+    "LocalConnection": ""
   },
   "Logging": {
     "LogLevel": {
