--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "",
-    "LocalConnection": ""
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
