--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-FRONT__MAIN="https://localhost:3000"
-FRONT__ADMIN="https://localhost:3001"
+FRONT_MAIN="https://localhost:3000"
+FRONT_ADMIN="https://localhost:3001"
 
 FRONT_WEBSITE_PORTS="3000:3000"
 FRONT_ADMIN_PORTS="3001:3000"
@@ -15,7 +15,7 @@ DB_PASSWORD=P@ssw0rd
 
 WEBSITE_API_URL="https://localhost:81/api"
 ADMIN_API_URL="https://localhost:81/api/admin"
-WEBSITE_CHAT_URL='https://localhost:81/chat'
+WEBSITE_CHAT_URL="https://localhost:81/chat"
 
 BACK_ASP_ENV=Development
 
