--- a/backend/Core/Services/Services.csproj
+++ b/backend/Core/Services/Services.csproj
@@ -10,11 +10,14 @@
       <ProjectReference Include="..\..\Infrastructure\Migrations\Migrations.csproj" />
       <ProjectReference Include="..\Contracts\Contracts.csproj" />
       <ProjectReference Include="..\Domain\Domain.csproj" />
+      <ProjectReference Include="..\Features\Features.csproj" />
       <ProjectReference Include="..\Services.Abstractions\Services.Abstractions.csproj" />
+      <ProjectReference Include="..\Shared\Shared.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.1" />
+      <PackageReference Include="MediatR" Version="12.1.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     </ItemGroup>
 
