Перенес userService на cqrs

--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "",
+    "DefaultConnection": "User ID=postgres;Password=P@ssw0rd;Server=localhost;Port=5432;Database=Carsharin;",
     "LocalConnection": ""
   },
   "Logging": {
@@ -18,13 +18,19 @@
   "AllowedHosts": "*",
   "Authorization": {
     "Facebook": {
-      "AppId": "",
-      "AppSecret": ""
+      "AppId": "170559199268168",
+      "AppSecret": "9ebbfab5b06bc31f1aae9fe7174c93f4"
     },
     "Google": {
-      "AppId": "",
-      "AppSecret": "",
+      "AppId": "687415070028-3o7siun1s5skobj4bao912tebcjbp34f.apps.googleusercontent.com",
+      "AppSecret": "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",
       "ReturnUri": "https://localhost:7129/api/account/google-external-auth-callback"
     }
+  },
+  "RabbitMqConfig": {
+    "Username": "chatConsumer",
+    "Password": "Passw0rd",
+    "Hostname": "localhost", 
+    "Port":"5672"
   }
 }
