added cqrs to tariff controllers, removed tariff services

--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=P@ssw0rd;Server=localhost;Port=5432;Database=Carsharin;",
+    "DefaultConnection": "",
     "LocalConnection": ""
   },
   "Logging": {
@@ -22,15 +22,15 @@
       "AppSecret": "9ebbfab5b06bc31f1aae9fe7174c93f4"
     },
     "Google": {
-      "AppId": "687415070028-3o7siun1s5skobj4bao912tebcjbp34f.apps.googleusercontent.com",
-      "AppSecret": "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",
-      "ReturnUri": "https://localhost:7129/api/account/google-external-auth-callback"
+      "AppId": "",
+      "AppSecret": "",
+      "ReturnUri": ""
     }
   },
   "RabbitMqConfig": {
-    "Username": "chatConsumer",
-    "Password": "Passw0rd",
-    "Hostname": "localhost", 
-    "Port":"5672"
+    "Username": "",
+    "Password": "",
+    "Hostname": "", 
+    "Port":""
   }
 }
