change admin get tariffs query signature, fixed map

--- a/backend/Core/Features/Features.csproj
+++ b/backend/Core/Features/Features.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Tariffs\Commands\" />
-    <Folder Include="UserProfile\" />
+    <Compile Remove="Tariffs\Commands\**" />
+    <Compile Remove="UserProfile\**" />
+    <EmbeddedResource Remove="Tariffs\Commands\**" />
+    <EmbeddedResource Remove="UserProfile\**" />
+    <None Remove="Tariffs\Commands\**" />
+    <None Remove="UserProfile\**" />
   </ItemGroup>
 
   <ItemGroup>
