--- a/backend/Core/Features/Features.csproj
+++ b/backend/Core/Features/Features.csproj
@@ -8,7 +8,6 @@
 
   <ItemGroup>
     <Folder Include="Tariffs\Commands\" />
-    <Folder Include="UserProfile\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.8.0" />
   </ItemGroup>
 
 </Project>
