added endpoints for file uploading

--- a/backend/MinioConsumers/appsettings.Development.json
+++ b/backend/MinioConsumers/appsettings.Development.json
@@ -5,5 +5,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "MinioS3": {
+    "AccessKey": "minioAdmin",
+    "SecretKey": "minioAdmin",
+    "Timeout": 500,
+    "Endpoint": "http://localhost:9000"
   }
 }
