--- a/backend/MinioConsumers/MinioConsumers.csproj
+++ b/backend/MinioConsumers/MinioConsumers.csproj
@@ -73,11 +73,13 @@
     <ItemGroup>
       <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
       <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3-develop.1613" />
+      <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="Minio" Version="6.0.1" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Core\Contracts\Contracts.csproj" />
+      <ProjectReference Include="..\Core\Shared\Shared.csproj" />
     </ItemGroup>
 
 </Project>
