configured upload endpoint

--- a/backend/MinioConsumers/appsettings.Development.json
+++ b/backend/MinioConsumers/appsettings.Development.json
@@ -7,9 +7,9 @@
     }
   },
   "MinioS3": {
-    "AccessKey": "minioAdmin",
-    "SecretKey": "minioAdmin",
+    "AccessKey": "UWvzyhXzva6ZQ4nt7jbS",
+    "SecretKey": "oqdoqPUZM6y4mt7qgjCW2JcfSwbPb690fjRRAXIz",
     "Timeout": 500,
-    "Endpoint": "http://localhost:9000"
+    "Endpoint": "localhost:9000"
   }
 }
