--- a/backend/MinioConsumers/MinioConsumers.csproj
+++ b/backend/MinioConsumers/MinioConsumers.csproj
@@ -75,6 +75,8 @@
       <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3-develop.1613" />
       <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="Minio" Version="6.0.1" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
     </ItemGroup>
 
     <ItemGroup>
