Перенес с авторизацию с кук на jwt

--- a/backend/Carsharing/appsettings.Development.json
+++ b/backend/Carsharing/appsettings.Development.json
@@ -20,5 +20,10 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "User ID=postgres;Password=P@ssw0rd;Server=localhost;Port=5432;Database=Carsharin;"
+  },
+  "Jwt": {
+    "Issuer": "Issuer",
+    "Audience": "Audience",
+    "Key": "MyVeryUniqueKey22222234"
   }
 }
