--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -32,5 +32,10 @@
     "Password": "",
     "Hostname": "", 
     "Port":""
+  },
+  "Jwt": {
+    "Issuer": "Issuer",
+    "Audience": "Audience",
+    "Key": "MyVeryUniqueKey22222234"
   }
 }
