Fixed create model photo saving

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 FRONT_MAIN="https://localhost:3000"
 FRONT_ADMIN="https://localhost:3001"
+BACK_FILESERVICE="http://host.docker.internal:7125"
 
 FRONT_WEBSITE_PORTS="3000:3000"
 FRONT_ADMIN_PORTS="3001:3000"
@@ -13,7 +14,6 @@ PGADMIN_PORTS="5050:80"
 DB_PORTS="5432:5432"
 DB_USER=postgres
 DB_PASSWORD=P@ssw0rd
-DEFAULT_CONNECTION="User ID=postgres;Password=P@ssw0rd;Server=db;Port=5432;Database=Carsharing;"
 
 WEBSITE_API_URL="https://localhost:81/api"
 ADMIN_API_URL="https://localhost:81/api/admin"
