--- a/backend/Carsharing/appsettings.Development.json
+++ b/backend/Carsharing/appsettings.Development.json
@@ -5,7 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "FrontendHost": "http://localhost:3000, https://localhost:3000, https://localhost:3001, http://localhost:3001",
+
+  "KnownHosts": {
+    "FrontendHosts": {
+      "Main": "http://localhost:3000",
+      "Admin": "http://localhost:3001"
+    },
+    "BackendHosts": {
+      "FileService": "https://localhost:7015"
+    }
+  },
   "Google": {
     "AppId": "687415070028-3o7siun1s5skobj4bao912tebcjbp34f.apps.googleusercontent.com",
     "AppSecret": "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",
@@ -19,6 +28,6 @@
     "Port": "5672"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=P@ssw0rd;Server=localhost;Port=5432;Database=Carsharin;"
+    "DefaultConnection": "User ID=postgres;Password=P@ssw0rd;Server=localhost;Port=5432;Database=Carsharing;"
   }
 }
