--- a/backend/MinioConsumers/appsettings.Development.json
+++ b/backend/MinioConsumers/appsettings.Development.json
@@ -7,8 +7,8 @@
     }
   },
   "MinioS3": {
-    "AccessKey": "UWvzyhXzva6ZQ4nt7jbS",
-    "SecretKey": "oqdoqPUZM6y4mt7qgjCW2JcfSwbPb690fjRRAXIz",
+    "AccessKey": "xgbvt5abKjeEPY7cymPE",
+    "SecretKey": "PgUhOXfY23RjkiHzIM5dduOPhlMGandet5xdkTcd",
     "Timeout": 500,
     "Endpoint": "localhost:9000"
   }
