--- a/compose.yaml
+++ b/compose.yaml
@@ -15,8 +15,7 @@ services:
         - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
         - ASPNETCORE_Kestrel__Certificates__Default__Password=${KestrelCertifPass}
       depends_on:
-       - rabbitmq  
-      
+       - rabbitmq      
   
   backend:
       build: 
@@ -24,8 +23,9 @@ services:
         dockerfile: CarsharingDockerfile
       container_name: backend
       environment:
-        - FrontendHost__Main =${FRONT_MAIN}
-        - FrontendHost__Admin =${FRONT_ADMIN}
+        - KnownHosts__FrontendHosts__Main=${FRONT_MAIN}
+        - KnownHosts__FrontendHosts__Admin=${FRONT_ADMIN}
+        - KnownHosts__BackendHosts__FileService=${BACK_FILESERVICE}
         - ASPNETCORE_ENVIRONMENT=${BACK_ASP_ENV}
         - ASPNETCORE_URLS=${ASPNETCORE_URLS}
         - ASPNETCORE_HTTPS_PORT=${ASPNETCORE_HTTPS_PORT}
@@ -94,20 +94,21 @@ services:
       context: ./backend
       dockerfile: MinioConsumersDockerfile
     ports:
-      - "7126:80"
+      - "7125:80"
+      - "7126:443"
     container_name: minio_carsharing
     depends_on:
       - minioS3
-      - rabbitmq
     environment:
       - MinioS3__AccessKey=minioadmin
       - MinioS3__SecretKey=minioadmin
       - MinioS3__Timeout=5000
       - MinioS3__Endpoint=minio:9000
-      - RabbitMqConfig__Username=chatConsumer
-      - RabbitMqConfig__Password=Passw0rd
-      - RabbitMqConfig__Hostname=rabbitmq
-      - RabbitMqConfig__Port=5672
+      - ASPNETCORE_ENVIRONMENT=${BACK_ASP_ENV}
+      - ASPNETCORE_URLS=${ASPNETCORE_URLS}
+      - ASPNETCORE_HTTPS_PORT=${ASPNETCORE_HTTPS_PORT}
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=${KestrelCertifPass}
     
   minioS3:
     image: minio/minio
