Добавил redis, добавил страницу в админке

--- a/backend/Carsharing/appsettings.Development.json
+++ b/backend/Carsharing/appsettings.Development.json
@@ -5,16 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
-  "KnownHosts": {
-    "FrontendHosts": {
-      "Main": "http://localhost:3000",
-      "Admin": "http://localhost:3001"
-    },
-    "BackendHosts": {
-      "FileService": "https://localhost:7015"
-    }
-  },
+  "FrontendHost": "http://localhost:3000, https://localhost:3000, https://localhost:3001, http://localhost:3001",
   "Google": {
     "AppId": "687415070028-3o7siun1s5skobj4bao912tebcjbp34f.apps.googleusercontent.com",
     "AppSecret": "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",
@@ -28,6 +19,6 @@
     "Port": "5672"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=P@ssw0rd;Server=localhost;Port=5432;Database=Carsharing;"
+    "DefaultConnection": "User ID=postgres;Password=P@ssw0rd;Server=localhost;Port=5432;Database=Carsharin;"
   }
 }
