--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -10,15 +10,9 @@
     }
   },
 
-
-  "KnownHosts": {
-    "FrontendHosts": {
-      "Main": "http://localhost:3000",
-      "Admin": "http://localhost:3001"
-    },
-    "BackendHosts": {
-      "FileService": "https://localhost:7015"
-    }
+  "FrontendHost": {
+    "Main": "http://localhost:3000",
+    "Admin": "http://localhost:3001"
   },
 
   "AllowedHosts": "*",
