--- a/backend/MinioConsumers/appsettings.Development.json
+++ b/backend/MinioConsumers/appsettings.Development.json
@@ -7,9 +7,12 @@
     }
   },
   "MinioS3": {
-    "AccessKey": "xgbvt5abKjeEPY7cymPE",
-    "SecretKey": "PgUhOXfY23RjkiHzIM5dduOPhlMGandet5xdkTcd",
+    "AccessKey": "UWvzyhXzva6ZQ4nt7jbS",
+    "SecretKey": "oqdoqPUZM6y4mt7qgjCW2JcfSwbPb690fjRRAXIz",
     "Timeout": 500,
     "Endpoint": "localhost:9000"
+  },
+  "Redis": {
+    "Connection": "localhost:6379"
   }
 }
