--- a/backend/Carsharing/Carsharing.csproj
+++ b/backend/Carsharing/Carsharing.csproj
@@ -13,6 +13,7 @@
     <Content Remove="AdminPanelResources\**" />
     <EmbeddedResource Remove="AdminPanelResources\**" />
     <None Remove="AdminPanelResources\**" />
+    <Compile Remove="Helpers\HttpTrackerHandler.cs" />
   </ItemGroup>
 
   <ItemGroup>
