--- a/backend/MinioConsumers/appsettings.json
+++ b/backend/MinioConsumers/appsettings.json
@@ -6,10 +6,19 @@
     }
   },
   "AllowedHosts": "*",
+  "RabbitMqConfig": {
+    "Username": "",
+    "Password": "",
+    "Hostname": "",
+    "Port": 0
+  },
   "MinioS3": {
     "AccessKey": "",
     "SecretKey": "",
     "Timeout": 500,
     "Endpoint": ""
+  },
+  "Redis": {
+    "Connection": "localhost:6379"
   }
 }
