Added mongoDb container to compose file

--- a/backend/MinioConsumers/appsettings.json
+++ b/backend/MinioConsumers/appsettings.json
@@ -14,5 +14,10 @@
   },
   "Redis": {
     "Connection": "localhost:6379"
+  },
+  "MongoDbSettings": {
+    "ConnectionUrl": "",
+    "User": "",
+    "Password": ""
   }
 }
