--- a/backend/MinioConsumers/MinioConsumers.csproj
+++ b/backend/MinioConsumers/MinioConsumers.csproj
@@ -73,6 +73,7 @@
     <ItemGroup>
       <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="Minio" Version="6.0.1" />
+      <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="StackExchange.Redis" Version="2.7.4" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
