Completed documents metadata on backend

--- a/backend/MinioConsumers/appsettings.json
+++ b/backend/MinioConsumers/appsettings.json
@@ -12,12 +12,16 @@
     "Timeout": 500,
     "Endpoint": ""
   },
-  "Redis": {
-    "Connection": "localhost:6379"
+  "RedisDbSettings": {
+    "Host": "",
+    "Port": 0,
+    "Password": ""
   },
   "MongoDbSettings": {
-    "ConnectionUrl": "",
+    "Host": "",
+    "Port": 0,
     "User": "",
-    "Password": ""
+    "Password": "",
+    "DatabaseName": ""
   }
 }
